css/main.css
/* ... */
/*
   * Extends the .sr-only class to allow the element
   * to be focusable when navigated to via the keyboard:
   * https://www.drupal.org/node/897638
   */

.sr-only.focusable:active,
.sr-only.focusable:focus {
  clip: auto;
  height: auto;
  margin: 0;
  overflow: visible;
  position: static;
  white-space: inherit;
  width: auto;
}

/*
   * Hide visually and from screen readers, but maintain layout
   */

.invisible {
  visibility: hidden;
}

/*
   * Clearfix: contain floats
   *
   * For modern browsers
   * 1. The space content is one way to avoid an Opera bug when the
   *    `contenteditable` attribute is included anywhere else in the document.
   *    Otherwise it causes space to appear at the top and bottom of elements
   *    that receive the `clearfix` class.
   * 2. The use of `table` rather than `block` is only necessary if using
   *    `:before` to contain the top-margins of child elements.
   */

.clearfix::before,
.clearfix::after {
  content: " ";
  display: table;
}

.clearfix::after {
  clear: both;
}

/* ====================================
  ======================================
       Media Queries - 
     =======================================
     =================================== */

@media only screen and (min-width: 500px) {
  /* General styles */

  .hero {
    height: 70vh;
    padding-bottom: 150px;
  }

  .hero::before {
    background: url("../img/tabletopenpic.jpg") no-repeat;
    background: url("../img/herotest6tablet.jpg") no-repeat;
    background: url("../img/herotablet.jpg") no-repeat;
    background: url("../img/jesstestheromobile.jpg") no-repeat;
    background-color: #000;
    background-size: cover;
    background-position: top;
  }

  .hero-content {
   padding-top: 300px;
  }
}
/* ====================================
  ======================================
       Media Queries - TABLET 
     =======================================
     =================================== */

@media only screen and (min-width: 768px) {
  /* General styles */

  html,
  body {
    width: 100%;
    overflow-x: hidden;
  }

  h2 {
    font-size: 35px;
  }

  h3 {
    font-size: 30px;
  }

  a.active,
  a.icon {
    font-size: 30px;
  }

  #myLinks a {
    font-size: 30px;
  }

  .btn {
    font-size: 1.25rem;
    padding: 15px 35px;
    border-radius: 25px;
    margin-top: 40px;
    text-transform: uppercase;
  }

  .hero-btn {
    margin-top: 30px;
    padding: 10px 20px;
  }

  .hero {
    height: 65vh;
    padding-bottom: 100px;
  }

  .hero h1 {
    margin-top: 50px;
    font-size: 30px;
    width: 75%;
    text-align: left;
    padding-top: 10px;
    font-weight: bold;
  }

  .hero-content p {
    font-size: 40px;
    margin-top: 100px;
    margin-top: 0;
    padding-top: 150px;
    font-weight: bold;
  }

  .hero-content {
   padding-top: 350px;
  }

  .herospan1 {
   font-size: 45px;
  }
  
  .opening-statement-btn {
   margin-top: 0;
   margin-bottom: 10px;
  }

  
  /* .openp1 {
   width: 90%;
  } */

  .openp1, .openp2 {
   font-size: 30px;
  }
  
  .keynote-speaker {
    padding: 30px 0 0;
  }

  .keynote-speaker-text h2 {
    font-size: 35px;
    margin-bottom: 20px;
  }

  .keynote-speaker-text {
    margin: 0;
    margin-left: 25px;
  }

 .keynote-img-div {
   width: 73%;
   margin: 0 auto;
  }

  .speaking-topics {
    padding: 30px 0 20px;
  }

  .speaking-topics h2 {
    margin-top: 30px;
  }

  .speaking-topics-div2 h3 {
    font-size: 26px;
  }

  .speaking-topics-img {
    display: none;
  }

  .work {
   width: 30%;
   height: 150px;
   margin: 0 5px;
  }

  .work-with-div {
    display: flex;
    
    align-items: center;
  }
  /* COMPANY LOGOS */

  .company-logos {
    padding: 25px 0;
  }

 .smlogo, .bglogo {
  width: 80px;
 }

  .amex-desktop::before {
    display: block;
  }

  .amex-mobile::before {
    display: none;
  }

  .logo-h2 {
    font-size: 25px;
  }

  .as-seen-in-list li {
    margin: 0 20px;
  }


  /* ABOUT */

  .about h3 {
    margin: 40px 0;
    font-size: 40px;
  }

  .about p {
    margin-top: 0;
  }

  .about img {
   width: 55%;
  }

  /* FOOTER */

  .footer-flex {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
  }

  .contact-email a {
    font-size: 25px;
  }

  .contact-email {
    margin: 50px 0 30px;
  }

  #contact {
    padding: 0 40px;
  }

  .contact p {
    color: white;
    margin: 0 10px;
    font-size: 28px;
  }

  /*---------------------------
         ARTICLES 
  -----------------------------*/
  .article-main p {
    font-size: 18px;
  }

  article h2 {
    font-size: 35px;
  }
  #heading-2 {
    font-size: 28px;
    margin: 0 0 30px;
  }

  .card {
    margin: 30px auto;
    width: 50%;
  }
}
/* ... */

